@@ -11,6 +11,7 @@ entire history of the project is available through SVN.
 --- 2007-11-XX  Release 7.11.0                                     ---
 ----------------------------------------------------------------------
 
+* improved dbconcat object suffix and prefix options - Sean Morrison
 * Tcl/Tk updated to 8.5 final from 8.5b1 - Erik Greenwald
 * fixed PIX image file creation bug on Windows - Bob Parker
 * ported rtwizard to function properly on Windows - Bob Parker
